--- a/index.html
+++ b/index.html
@@ -54,24 +54,31 @@
 </head>
 
 <body>
-        <div id='logo'>
-                <h1 id='connectLogo'> Connect</h1>
-                <h2 id='withLogo' > With</h2>
+    <div>
+        <div class='bgPic'>
+            <div id='logo'>
+                <img src="/logo.png"/>
+                <div class='logoName'>
+                  <h1 id='connectLogo'> Connect</h1>
+                  <h2 id='withLogo' > With</h2>
                 </div>
-                
-<div>
-    <h1>What is your desired occupation?</h1>
-    <input type="text" id="occupation">
-    <button type="button" onclick="getOcc()" name="button">Find</button>
-
-    </form>
-    <p id='searchRes'>
-
-    </p>
-
-    <!-- <p>This domain is for use in illustrative examples in documents. You may use this
-    domain in literature without prior coordination or asking for permission.</p>
-    <p><a href="https://www.iana.org/domains/example">More information...</a></p> -->
-</div>
+            </div>
+          <div class='slogan'>Who will you connect with today?</div>
+          <img src="/bg.jpg"/>
+        </div>
+        <div class='wrapper'>
+          <p>What is your desired occupation?</p>
+          <input type="text" id="occupation">
+            <button type="button" onclick="getOcc()" name="button">Find</button>
+          </form>
+          <p id='searchRes'>
+    
+          </p>
+  
+        <!-- <p>This domain is for use in illustrative examples in documents. You may use this
+        domain in literature without prior coordination or asking for permission.</p>
+        <p><a href="https://www.iana.org/domains/example">More information...</a></p> -->
+      </div>
+  </div>    
 </body>
 </html>
